Update build-kernel.yml for stability and improvements

--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -1,4 +1,4 @@
-name: Build SM-M556B Kernel (Samsung • No LTO • AOSP Clang)
+name: Build SM-M556B Kernel (Samsung | Stable | No LTO)
 
 on:
   workflow_dispatch:
@@ -11,6 +11,7 @@ jobs:
       BUILD_TARGET: m55xq_swa_open
       CHIPSET_NAME: x55
       TARGET_PRODUCT: gki
+      TARGET_BOARD_PLATFORM: gki
       ARCH: arm64
       SUBARCH: arm64
       IS_KBUILD: true
@@ -33,34 +34,64 @@ jobs:
           build-essential \
           python3 \
           ccache \
-          zip unzip curl
+          zip unzip curl \
+          rsync
 
     - name: Init Git LFS
       run: |
         git lfs install
         git lfs pull
 
-    # 🔥 AQUI ESTÁ A CORREÇÃO DO ERRO ld.lld
+    # ------------------------------------------------
+    # ANDROID ENV (SEM LUNCH, CI FRIENDLY)
+    # ------------------------------------------------
+    - name: Setup Android build environment
+      run: |
+        echo "ANDROID_BUILD_TOP=$(pwd)" >> $GITHUB_ENV
+        echo "ARCH=arm64" >> $GITHUB_ENV
+        echo "SUBARCH=arm64" >> $GITHUB_ENV
+        echo "LLVM=1" >> $GITHUB_ENV
+        echo "LLVM_IAS=1" >> $GITHUB_ENV
+        echo "IS_KBUILD=true" >> $GITHUB_ENV
+        echo "TARGET_PRODUCT=gki" >> $GITHUB_ENV
+        echo "TARGET_BOARD_PLATFORM=gki" >> $GITHUB_ENV
+
+    # ------------------------------------------------
+    # AOSP CLANG (RESOLVE ld.lld DEFINITIVAMENTE)
+    # ------------------------------------------------
     - name: Setup AOSP Clang toolchain (from source)
       run: |
-        CLANG_DIR=$(pwd)/Kernel/kernel_platform/prebuilts-master/clang/host/linux-x86
-        CLANG_BIN=$(ls $CLANG_DIR/clang-*/bin | head -n 1 | xargs dirname)
+        CLANG_BASE=$(pwd)/Kernel/kernel_platform/prebuilts-master/clang/host/linux-x86
+        CLANG_BIN=$(ls $CLANG_BASE/clang-*/bin | head -n 1 | xargs dirname)
 
         echo "PATH=$CLANG_BIN:$PATH" >> $GITHUB_ENV
         echo "CC=clang" >> $GITHUB_ENV
         echo "LD=ld.lld" >> $GITHUB_ENV
-        echo "LLVM=1" >> $GITHUB_ENV
-        echo "LLVM_IAS=1" >> $GITHUB_ENV
+        echo "AR=llvm-ar" >> $GITHUB_ENV
+        echo "NM=llvm-nm" >> $GITHUB_ENV
+        echo "OBJCOPY=llvm-objcopy" >> $GITHUB_ENV
+        echo "OBJDUMP=llvm-objdump" >> $GITHUB_ENV
+        echo "STRIP=llvm-strip" >> $GITHUB_ENV
 
-    - name: Disable LTO (Vega method)
+    # ------------------------------------------------
+    # DESABILITAR LTO (MÉTODO VEGA + FALLBACK)
+    # ------------------------------------------------
+    - name: Disable LTO completely
       run: |
         DEFCONFIG=Kernel/kernel_platform/msm-kernel/arch/arm64/configs/vendor/x55_defconfig
+
         sed -i 's/^CONFIG_LTO=y/CONFIG_LTO=n/' $DEFCONFIG || true
         sed -i 's/^CONFIG_LTO_CLANG=y/CONFIG_LTO_CLANG=n/' $DEFCONFIG || true
         sed -i 's/^CONFIG_LTO_CLANG_THIN=y/CONFIG_LTO_CLANG_THIN=n/' $DEFCONFIG || true
         sed -i 's/^CONFIG_LTO_CLANG_FULL=y/CONFIG_LTO_CLANG_FULL=n/' $DEFCONFIG || true
 
-    # ⚠️ PASSO OBRIGATÓRIO EM KERNEL SAMSUNG
+        echo "CONFIG_LTO=n" >> $DEFCONFIG
+        echo "CONFIG_LTO_CLANG=n" >> $DEFCONFIG
+        echo "CONFIG_THINLTO=n" >> $DEFCONFIG
+
+    # ------------------------------------------------
+    # SAMSUNG VENDOR PREP (OBRIGATÓRIO)
+    # ------------------------------------------------
     - name: Prepare Samsung vendor build
       run: |
         cd Kernel/kernel_platform
@@ -68,18 +99,27 @@ jobs:
         ./build/android/prepare_vendor.sh \
         $CHIPSET_NAME $TARGET_PRODUCT gki
 
+    # ------------------------------------------------
+    # DEFCONFIG
+    # ------------------------------------------------
     - name: Kernel defconfig
       run: |
         cd Kernel/kernel_platform/msm-kernel
         make O=../../out vendor/x55_defconfig
 
-    - name: Build kernel Image (NO LTO / NO HDRINST)
+    # ------------------------------------------------
+    # BUILD (SEM HDRINST / SEM HEADERS)
+    # ------------------------------------------------
+    - name: Build kernel Image
       run: |
         cd Kernel/kernel_platform/msm-kernel
         make -j$(nproc) \
           O=../../out \
           Image
 
+    # ------------------------------------------------
+    # UPLOAD
+    # ------------------------------------------------
     - name: Upload kernel Image
       uses: actions/upload-artifact@v4
       with:
